# nathandias.com

./: .envrc.template  .gitignore  README.md  dumpeddata.json  manage.py  passenger_wsgi.py.template  pyproject.toml  requirements.txt
developer_info/: admin.py  apps.py  models.py
developer_info/migrations/: 0001_initial.py  0002_auto_20210422_1618.py  0003_auto_20210422_1621.py  0004_auto_20210422_1624.py  0005_project_thumbnail.py  0006_auto_20210423_1452.py
nathandias_com/: asgi.py  settings.py  urls.py  views.py  wsgi.py
templates/: base_generic.html  googleauth.html  home.html
