[tool.poetry]
name = "nathandias.com"
version = "0.1.0"
description = ""
authors = ["Nathan Dias <nathan.dias@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.6"
whitenoise = "^5.2.0"
Pillow = "^8.2.0"
mysqlclient = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
